deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cargo
spec:
  selector: { app: cargo }
  ports:
    - port: 80
      targetPort: 8080
